# homeassistant-greenchoice

./: README.md  pyproject.toml
custom_components/greenchoice/: __init__.py  api.py  auth.py  config_flow.py  const.py  manifest.json  model.py  sensor.py  util.py
custom_components/greenchoice/translations/: en.json
tests/: conftest.py  test_api.py  test_config_flow.py  test_sync_api.py
tests/test_data/: test_contract.json  test_contract_current.json  test_meters_v2.json  test_preferences.json  test_profiles.json
