[project]
name = "homeassistant-greenchoice"
version = "2.3.0"
description = "Integration to connect Greenchoice.nl with Home Assistant"
authors = ["Baris Demirdelen <barisdemirdelen@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "homeassistant>=2024.12.5",
    "pydantic>=2.11.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "mypy>=1.14.1",
    "ruff>=0.9.4",
    "pytest-mock>=3.14.0",
    "types-requests>=2.31.0.6",
    "requests-mock>=1.12.1",
    "ty>=0.0.0a8",
]
